# pulse-ai

./: .gitignore  CHANGELOG.md
apps/api/: README.md  pyproject.toml
apps/api/docs/: TECH_DEBT.md
apps/api/src/pulse/: __init__.py
apps/api/src/pulse/application/: __init__.py  ports.py
apps/api/src/pulse/application/fingerprint/: __init__.py  snapshot_fingerprint.py
apps/api/src/pulse/application/frames/: __init__.py  codec.py  event_codec.py  frame.py
apps/api/src/pulse/application/reduction/: __init__.py  config.py  reducer.py  timeline.py
apps/api/src/pulse/application/verification/: __init__.py  verify_replay.py
apps/api/src/pulse/domain/: __init__.py  config.py  numeric.py
apps/api/src/pulse/domain/entities/: __init__.py  match.py  team.py
apps/api/src/pulse/domain/events/: __init__.py  base.py  football.py  signals.py
apps/api/src/pulse/domain/services/: __init__.py  confidence.py  drama.py  emotion.py  engine.py  fan_semantics.py  momentum.py  phase.py  pressure.py  pulse.py  shift.py  windowing.py
apps/api/src/pulse/domain/value_objects/: __init__.py  certainty.py  emotional_state.py  (+8 more)
apps/api/src/pulse/infrastructure/: __init__.py
apps/api/src/pulse/presentation/: __init__.py  app.py  serialization.py
apps/api/tests/application/: conftest.py  test_codec.py  test_fingerprint.py  test_frame.py  test_reducer.py  test_replay_equivalence.py  test_verify_replay.py
apps/api/tests/domain/: conftest.py  test_confidence.py  test_determinism.py  test_drama.py  test_engine.py  test_entities_and_config.py  test_events_and_values.py  test_fan_semantics.py  test_momentum.py  test_numeric.py  test_phase_and_emotion.py  test_pressure.py  test_pulse.py  test_shift.py  test_windowing.py
apps/api/tests/infrastructure/: test_demo.py  test_providers.py  test_tape_store.py  test_txline.py
apps/api/tests/presentation/: test_app.py  test_serialization.py
(+42 files in other folders)
