[project]
name = "pulse-domain"
version = "0.1.0"
description = "Pulse — deterministic football match-intelligence domain & metric engine"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []  # the domain + application layers are pure stdlib by design

[project.optional-dependencies]
# Presentation layer only — domain/application stay dependency-free.
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
test = ["pytest>=8.0", "pytest-cov>=5.0", "fastapi>=0.110", "httpx>=0.27"]

[project.scripts]
pulse-api = "pulse.presentation.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pulse"]

[tool.pytest.ini_options]
addopts = "-q --cov=pulse --cov-report=term-missing --cov-branch"
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "\\.\\.\\.",
]
